--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,107 +1,137 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#dc2626" />
-    <meta
-      name="description"
-      content="CrisisLink - One-Tap Disaster Rescue System for South Africa"
-    />
-
-    <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-
-    <!-- Manifest for PWA -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <!-- Mapbox CSS -->
-    <link
-      href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css"
-      rel="stylesheet"
-    />
-
-    <!-- Preconnect to external domains for performance -->
-    <link rel="preconnect" href="https://api.mapbox.com" />
-    <link rel="preconnect" href="https://api.openweathermap.org" />
-
-    <!-- Critical CSS for loading state -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CrisisLink - Emergency Response</title>
     <style>
       body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #ff4757 0%, #c44569 100%);
         margin: 0;
-        font-family:
-          -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-          'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-          sans-serif;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        background-color: #0f172a;
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        overflow: hidden;
       }
-
-      .loading-spinner {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 50px;
-        height: 50px;
-        border: 3px solid #334155;
-        border-radius: 50%;
-        border-top-color: #dc2626;
-        animation: spin 1s ease-in-out infinite;
+      .container {
+        text-align: center;
+        padding: 60px 40px;
+        background: rgba(255, 255, 255, 0.15);
+        border-radius: 30px;
+        -webkit-backdrop-filter: blur(15px);
+        backdrop-filter: blur(15px);
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        border: 1px solid rgba(255, 255, 255, 0.2);
       }
-
-      @keyframes spin {
-        to {
-          transform: translate(-50%, -50%) rotate(360deg);
-        }
+      h1 {
+        font-size: 3.5rem;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+        font-weight: 700;
       }
-
-      .emergency-pulse {
-        animation: emergency-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+      .emoji {
+        font-size: 5rem;
+        margin-bottom: 30px;
+        animation: pulse 2s infinite;
       }
-
-      @keyframes emergency-pulse {
-        0%,
-        100% {
-          opacity: 1;
+      @keyframes pulse {
+        0% {
           transform: scale(1);
         }
         50% {
-          opacity: 0.8;
-          transform: scale(1.05);
+          transform: scale(1.1);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+      .emergency-button {
+        background: linear-gradient(45deg, #ff4757, #ff3742);
+        border: none;
+        color: white;
+        padding: 25px 50px;
+        font-size: 1.8rem;
+        font-weight: bold;
+        border-radius: 60px;
+        cursor: pointer;
+        text-decoration: none;
+        display: inline-block;
+        margin: 20px 0;
+        box-shadow: 0 8px 25px rgba(255, 71, 87, 0.4);
+        transition: all 0.3s ease;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      }
+      .emergency-button:hover {
+        transform: translateY(-3px) scale(1.05);
+        box-shadow: 0 15px 35px rgba(255, 71, 87, 0.6);
+        background: linear-gradient(45deg, #ff3742, #ff2f3a);
+      }
+      .subtitle {
+        font-size: 1.4rem;
+        margin-bottom: 40px;
+        opacity: 0.9;
+        font-weight: 300;
+      }
+      .loading-dots {
+        margin-top: 30px;
+        font-size: 1.1rem;
+        opacity: 0.7;
+      }
+      .loading-dots span {
+        animation: blink 1.4s infinite both;
+      }
+      .loading-dots span:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+      .loading-dots span:nth-child(3) {
+        animation-delay: 0.4s;
+      }
+      @keyframes blink {
+        0%,
+        80%,
+        100% {
+          opacity: 0;
+        }
+        40% {
+          opacity: 1;
         }
       }
     </style>
-
-    <title>CrisisLink - Emergency Response System</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div class="loading-spinner"></div>
+    <div class="container">
+      <div class="emoji">🚨</div>
+      <h1>CrisisLink</h1>
+      <p class="subtitle">Emergency Response System</p>
+
+      <a href="/emergency.html" class="emergency-button">
+        🆘 Get Emergency Help
+      </a>
+
+      <div class="loading-dots">
+        Ready for emergency response<span>.</span><span>.</span><span>.</span>
+      </div>
     </div>
 
-    <!-- Service Worker Registration (disabled on localhost for dev stability) -->
     <script>
-      ;(function () {
-        const isLocalhost = ['localhost', '127.0.0.1', '::1'].includes(
-          location.hostname
+      // Redirect mobile users directly to emergency interface
+      if (
+        window.innerWidth <= 768 &&
+        /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(
+          navigator.userAgent
         )
-        if ('serviceWorker' in navigator && !isLocalhost) {
-          window.addEventListener('load', () => {
-            navigator.serviceWorker
-              .register('/sw.js')
-              .then((registration) => {
-                console.log('SW registered: ', registration)
-              })
-              .catch((registrationError) => {
-                console.log('SW registration failed: ', registrationError)
-              })
-          })
-        }
-      })()
+      ) {
+        // Small delay to show the interface briefly
+        setTimeout(() => {
+          window.location.href = '/emergency.html'
+        }, 2000)
+      }
     </script>
   </body>
 </html>
